# pcap-minimizer

./: .pre-commit-config.yaml  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: check.yml
src/: lib.rs  main.rs  progress.rs
tests/: example.pcapng  get.sh  integration_test.rs
